# unity_threadplugin

./: Assembly-CSharp.csproj  Interface1.sln
Assets/: Basic.unity  UseNative2.cs
ProjectSettings/: ProjectSettings.asset
native/: CMakeLists.txt  test1.cpp
